[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiovban"
version = "0.7.0"
authors = [
  { name="William Best", email="wmbest2@gmail.com" },
]
description = "An asyncio VBAN implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["vban", "audio", "asyncio", "voicemeeter"]

[project.urls]
Homepage = "https://github.com/wmbest2/aiovban"
Issues = "https://github.com/wmbest2/aiovban/issues"
Repository = "https://github.com/wmbest2/aiovban"
Changelog = "https://github.com/wmbest2/aiovban/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tox>=4.0",
    "build>=1.0",
    "twine>=6.0",
]


[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.13", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest"]
commands = [["pytest"]]
