[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "aiovban"
version = "0.7.1"
authors = [
  { name="William Best", email="wmbest2@gmail.com" },
]
description = "An asyncio VBAN implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["vban", "audio", "asyncio", "voicemeeter"]

[project.urls]
Homepage = "https://github.com/wmbest2/aiovban"
Issues = "https://github.com/wmbest2/aiovban/issues"
Repository = "https://github.com/wmbest2/aiovban"
Changelog = "https://github.com/wmbest2/aiovban/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "aiovban-pyaudio[cli]",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["aiovban_pyaudio"]

[tool.uv.sources]
aiovban = { workspace = true }
aiovban-pyaudio = { workspace = true }
