[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "aiovban"
version = "1.0.1"
authors = [
  { name="William Best", email="wmbest2@gmail.com" },
]
description = "An asyncio VBAN implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["vban", "audio", "asyncio", "voicemeeter"]
dependencies = [
    "textual>=8.2.3",
]

[project.scripts]
aiovban-monitor = "aiovban.scripts.rt_monitor:main"
aiovban-tui = "aiovban.scripts.tui:main"

[project.urls]
Homepage = "https://github.com/wmbest2/aiovban"
Issues = "https://github.com/wmbest2/aiovban/issues"
Repository = "https://github.com/wmbest2/aiovban"
Changelog = "https://github.com/wmbest2/aiovban/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "aiovban-pyaudio[cli]",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["aiovban_pyaudio"]

[tool.uv.sources]
aiovban = { workspace = true }
aiovban-pyaudio = { workspace = true }
