[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiovban_pyaudio"
version = "0.3.0"
authors = [
  { name="William Best", email="wmbest2@gmail.com" },
]
description = "A PyAudio wrapper for aiovban"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiovban",
    "pyaudio"
]

[project.optional-dependencies]
cli = ["setproctitle"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
aiovban-receiver = "aiovban_pyaudio.scripts:audio_receiver.main"
aiovban-sender = "aiovban_pyaudio.scripts:audio_sender.main"